<resources>
    <string name="app_name">Chasing Pictures</string>

    <string name="title_activity_login">Log in</string>
    <string name="login_button">Log in</string>
    <string name="title_activity_login_form">Log in</string>
    <string name="title_activity_register">Register</string>
    <string name="register_button">Register</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">yourname@example.com</string>
    <string name="hint_username">Username</string>
    <string name="login_prompt">Please log in…</string>
    <string name="title_activity_maps">Map</string>
    <string name="invalid_email">That is not a valid email address.</string>
    <string name="login_success">Login successful.</string>
    <string name="login_fail">Login failed.</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="register.invalid_username">This name is invalid.</string>
    <string name="registration_fail">Registration failed.</string>
    <string name="title_activity_picture_selection">Picture Selection</string>
    <string name="title_activity_camera">Camera</string>
    <string name="access_mb" translatable="false">pk.eyJ1IjoibWlyaXdpZSIsImEiOiJjYjk5YWY3ZThjYWZlMmYxZjA0MmJlNWI1MTQwYzg4ZSJ9.GZIICvdQlnw5XxuDgI2dqA</string>
    <string name="register.error.password_too_short">Password is too short (at least 8 characters)</string>
    <string name="logout_success">Logout successful.</string>
    <string name="log_out">Log out</string>
    <string name="title_activity_slideshow">Slideshow</string>
    <string name="title_activity_menu">Menu</string>
    <string name="chase_picture">chase picture</string>
    <string name="mapbox_attribution_links" translatable="false"><![CDATA[<a href="https://www.mapbox.com/about/maps/">&copy; Mapbox</a> <a href="http://www.openstreetmap.org/about/">&copy; OpenStreetMap</a> <a href="https://www.mapbox.com/map-feedback/"><b>Improve this map</b></a>]]></string>
    <string name="mapbox_logo_desc" translatable="false">Mapbox</string>
    <!-- Imprint, when translating, please adjust the links to the licenses to a version in the target language (if available) -->
    <string name="imprint_title">Imprint</string>
    <string name="imprint_text_start">The application ChasingPictures was developed by Katharina Stärck, Miriam Wieseke, Jakob Warkotsch and Simon Kalt.</string>
    <string name="imprint_title_license">License</string>
    <string name="imprint_text_license"><![CDATA[
All code and design elements are released under the MIT License. The code for
<a href="https://github.com/kaltsimon/Chasing-Pictures-front-end">this app</a> and the
<a href="https://github.com/kaltsimon/Chasing-Pictures-back-end">server backend</a> is available on GitHub.
]]></string>
    <string name="imprint_title_libraries">Libraries</string>
    <string name="imprint_text_libraries"><![CDATA[
This application uses the following libraries, which are all released under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>:
]]>
    </string>
    <string name="imprint_title_photos_stadtmuseum">Images</string>
    <string name="imprint_text_photos_stadtmuseum"><![CDATA[
The images displaying the city views of Berlin are provided by the
<a href="http://www.stadtmuseum.de/">Stadtmuseum Berlin</a> and are available on
<a href="https://commons.wikimedia.org/wiki/Category:Stadtansichten_(Stiftung_Stadtmuseum_Berlin)">Wikimedia Commons</a>
under <a href="https://creativecommons.org/publicdomain/mark/1.0/deed.en">public domain</a>.
]]>
    </string>
    <string name="imprint_title_photos_user">User Photos</string>
    <string name="imprint_text_photos_user"><![CDATA[
Photos uploaded by the users of this application are licensed under a
<a href="http://creativecommons.org/licenses/by-sa/4.0/deed.en">Creative Commons Attribution-ShareAlike 4.0</a> license.
By uploading a photo through this application (this happens automatically when you accept a photo in the camera view after taking it),
you agree to release the photo under this license. The photo will be attributed to you by your chosen username.
]]>
    </string>
    <string-array name="imprint_libraries">
        <item><![CDATA[<a href=\"http://projects.spring.io/spring-android/\">Spring for Android</a> for connecting to the REST back end.]]></item>
        <item><![CDATA[<a href=\"https://github.com/FasterXML\">Jackson</a> for (de-)serializing JSON]]></item>
        <item><![CDATA[The <a href=\"https://www.mapbox.com/mapbox-android-sdk/\">Mapbox Android SDK</a> for displaying pretty maps using the <a href=\"https://www.mapbox.com/\">Mapbox</a> service.]]></item>
        <item><![CDATA[<a href=\"https://github.com/shamanland/xdroid\">Xdroid</a> for simple toasting from anywhere]]></item>
    </string-array>
    <!-- /Imprint -->
</resources>
