<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context="de.fu_berlin.cdv.chasingpictures.LoginForm">

    <TextView
        style="@style/Vertical.Heading"
        android:text="@string/title_activity_login_form"
        android:id="@+id/heading" />

    <EditText
        style="@style/Vertical.TextField"
        android:inputType="textEmailAddress"
        android:id="@+id/LoginEmailAddress"
        android:hint="@string/hint_email"/>

    <EditText
        style="@style/Vertical.TextField"
        android:inputType="textPassword"
        android:id="@+id/LoginPassword"
        android:hint="@string/hint_password"/>

    <Button
        style="@style/Vertical.Button"
        android:text="@string/login_button"
        android:id="@+id/button_login"
        android:onClick="doLogin"/>
</LinearLayout>
