<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context="de.fu_berlin.cdv.chasingpictures.LoginPage">

    <TextView
        style="@style/Vertical.Heading"
        android:text="@string/login_prompt"/>
    <Button
        style="@style/Vertical.Button"
        android:text="@string/login_button"
        android:id="@+id/button_login"
        android:onClick="showLoginForm"
        android:ems="@integer/standard_textinput_ems"/>

    <Button
        style="@style/Vertical.Button"
        android:text="@string/register_button"
        android:id="@+id/button_register"
        android:onClick="showRegisterForm"
        android:ems="@integer/standard_textinput_ems" />
</LinearLayout>

